--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -1,115 +1,115 @@
 // main: ../style.less
 
 .about {
-    margin: 8.4rem 0;
+  margin: 8.4rem 0;
 
-    @media @mobile {
-        & {
-            margin: 5rem 0;
-        }
+  @media @mobile {
+    & {
+      margin: 5rem 0;
     }
+  }
 }
 
-.about__inner {          //Разбиваем photo и content на 2 ровные части
-    display: flex;
+.about__inner {
+  //Разбиваем photo и content на 2 ровные части
+  display: flex;
 
-    @media @mobile {
-        & {
-            justify-content: center;
-        }
+  @media @mobile {
+    & {
+      justify-content: center;
     }
+  }
 }
 
-.about__photo {           
-    flex-basis: 50%;     //Аналогично что и width: 50%;
-    position: relative;
+.about__photo {
+  flex-basis: 50%; //Аналогично что и width: 50%;
+  position: relative;
+
+  @media @tablet {
+    & {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+  }
+
+  @media @mobile {
+    & {
+      display: none;
+    }
+  }
+}
+
+& .about__img {
+  position: relative;
+  z-index: 2;
+  display: block;
+  max-width: 100%;
+  height: auto;
+
+  &:before {
+    content: "";
+    width: 413px;
+    height: 413px;
+    background-color: #efefef;
+
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
 
     @media @tablet {
-        & {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
+      & {
+        display: none;
+      }
     }
-
-    @media @mobile {
-        & {
-            display: none;
-        }
-    }
-}
-
-    & .about__img {
-        position: relative;
-        z-index: 2;
-        display: block;
-        max-width: 100%;
-        height: auto;
-
-    &:before {
-        content: "";
-        width: 413px;
-        height: 413px;
-        background-color: #EFEFEF;
-
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        z-index: 1;
-
-        @media @tablet {
-            & {
-                display: none;
-            }
-        }
-    }
+  }
 }
 
 .about__content {
-    flex-basis: 50%;     //Аналогично что и width: 50%;
-    padding: 2.66rem 1rem;
+  flex-basis: 50%; //Аналогично что и width: 50%;
+  padding: 2.66rem 1rem;
 
-    @media @mobile {
-        & {
-            flex-basis: 80%;
-            text-align: center;
-            justify-content: center;
-        }
-
-        & .buttons {
-            justify-content: center;
-        }
+  @media @mobile {
+    & {
+      flex-basis: 80%;
+      text-align: center;
+      justify-content: center;
     }
 
+    & .buttons {
+      justify-content: center;
+    }
+  }
 }
 
 .about__title {
-    font-size: 2.8rem;
-    font-weight: 700;
-    margin-bottom: 0.3rem;
+  font-size: 2.8rem;
+  font-weight: 700;
+  margin-bottom: 0.3rem;
 }
 
 .about__bigtitle {
-    font-size: 6.13rem;
-    font-weight: 700;
-    color: fade(@black; 15%);
-    margin-bottom: 1rem;
+  font-size: 6.13rem;
+  font-weight: 700;
+  color: fade(@black; 15%);
+  margin-bottom: 1rem;
 
-    @media @tablet {
-        & {
-            font-size: 4.3rem;
-        }
+  @media @tablet {
+    & {
+      font-size: 4.3rem;
     }
+  }
 
-    @media @mobile {
-       & {
-            font-size: 4rem;
-        }
+  @media @mobile {
+    & {
+      font-size: 4rem;
     }
+  }
 }
 
 .about__text {
-    margin-bottom: 2.66rem;
-    font-size: 0.8rem;
-    color: @gray;
+  margin-bottom: 2.66rem;
+  font-size: 0.8rem;
+  color: @gray;
 }
