--- a/css/blocks/footer.less
+++ b/css/blocks/footer.less
@@ -1,168 +1,257 @@
 // main: ../style.less
-
 .footer {
-    background-color: @black;
-    padding: 1.1rem 0;
+  background-color: @black;
+  padding: 1.1rem 0;
 }
 
 .footer__inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  @media @mobile560px {
+    & {
+      flex-direction: column-reverse;
+    }
+  }
 }
 
 .footer__left {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  @media @mobile560px {
+    & {
+      width: 100%;
+    }
+  }
 }
 
 .footer__border {
-    border-color: @white;
+  border-color: @white;
 }
 
 .footer__date-site {
-    font-size: 0.93rem;
-    color: @gray-light;
-    font-weight: 400;
-    margin-right: 1.86rem;
+    position: relative;
+  font-size: 0.93rem;
+  color: @gray-light;
+  font-weight: 400;
+  margin-right: 1.86rem;
 
-    @media @mobile {
+  &:after {
+    position: absolute;
+    content: "";
+    height: 1.33rem;
+    width: 0.066rem;
+    background-color: @gray-light;
+    margin: 0 0.66rem 0 0.66rem;
+
+    @media @mobile560px {
         & {
-            font-size: 0.8rem;
+            margin: 0 0.66rem 0 0.9rem;
         }
     }
 
-    @media @mobileNormal {
+    @media @mobile471px {
         & {
-            display: none;
+            top: 5px;
         }
     }
+  }
 
-    &:after {
-        position: absolute;
-        content: "";
-        height: 1.33rem;
-        width: 0.066rem;
-        background-color: @gray-light;
-        margin: 0 0.66rem 0 0.66rem;
+  @media @mobile {
+    & {
+      font-size: 0.8rem;
     }
+  }
+
+  @media @mobileNormal {
+    & {
+      display: none;
+    }
+  }
+
+  @media @mobile560px {
+      & {
+          display: block;
+      }
+  }
+
+  @media @mobile471px {
+    & {
+        display: none;
+    }
+}
+
+  @media @mobile405px {
+    & {
+        display: none;
+    }
+}
+
+}
+
+.footer__back-nav {
+  @media @mobile560px {
+    & {
+      display: flex;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+      padding-bottom: 0.8rem;
+    }
+  }
 }
 
 .footer__back__links {
-    font-size: 0.93rem;
-    font-weight: 400;
-    color: @gray-light;
-    text-decoration: none;
+  font-size: 0.93rem;
+  font-weight: 400;
+  color: @gray-light;
+  text-decoration: none;
+
+  transition: all 0.2s linear;
+
+  &:hover {
+    color: @white;
+  }
+
+  &:not(:last-child) { // Ко всем кроме последнего элемента
     margin-right: 0.66rem;
-    transition: all .2s linear;
+  }
 
-    &:hover {
-        color: @white;
+  @media @mobile {
+    & {
+      font-size: 0.8rem;
     }
+  }
 
-    
-    @media @mobile {
-        & {
-            font-size: 0.8rem;
-        }
+  @media @mobile560px {
+    & {
+      font-size: 1rem;
     }
+    &:not(:last-child) {
+        margin-right: 1.5rem;
+    }
+  }
 }
 
 .footer__last__link {
-    border: 1px solid @gray-light;
-    padding: 0.33rem 1.33rem;
-    border-radius: 1.7rem;
-    transition: all .2s linear;
-    text-transform: uppercase;
+  border: 1px solid @gray-light;
+  padding: 0.33rem 1.33rem;
+  border-radius: 1.7rem;
+  transition: all 0.2s linear;
+  text-transform: uppercase;
 
-    &:hover {
-        color: @white;
-        background-color: fade(@gray, 10%);
-    }
+  &:hover {
+    color: @white;
+    background-color: fade(@gray, 10%);
+  }
 }
 
 .footer__nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer__link__icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    border: 1px solid @gray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  border: 1px solid @gray;
+  transition: all 0.2s linear;
+
+  &:hover {
+    transform: translateY(-5px);
+  }
+
+  &--one:hover {
+    background-color: fade(#1869ff, 70%);
+  }
+  &--two:hover {
+    background-color: fade(#e51a68, 70%);
+  }
+  &--three:hover {
+    background-color: fade(#007bb6, 70%);
+  }
+  &--four:hover {
+    background-color: fade(#3a5898, 70%);
+  }
+
+  &--five {
+    position: relative;
+    z-index: 1;
+
+    &::before {
+      border-radius: 50%;
+      position: absolute;
+      content: "";
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-image: linear-gradient(
+        45deg,
+        #405de6,
+        #5851db,
+        #833ab4,
+        #c13584,
+        #e1306c,
+        #fd1d1d
+      );
+      opacity: 0;
+      z-index: -1;
+      transition: all 0.2s linear;
+    }
+    &:hover::before {
+      opacity: 1; /* При наведении на нашу иконку показываем цвет градиент, чтобы был плавный */
+    }
+  }
+  &--six:hover {
+    background-color: fade(#56acef, 70%);
+  }
+  &--seven:hover {
+    background-color: fade(@black, 100%);
+  }
+
+  &:not(:last-child) {
     margin-right: 0.33rem;
-    transition: all .2s linear;
+  }
 
-    &:hover {
-        transform: translateY(-5px);
+  @media @mobile560px {
+    &:not(:last-child) {
+      margin-right: 0.5rem;
     }
+  }
 
-    &--one:hover {
-        background-color: fade(#1869FF, 70%);
+  @media @mobile405px {
+    &:not(:last-child) {
+      margin-right: 0.6rem;
     }
-    &--two:hover {
-        background-color: fade(#E51A68, 70%);
-    }
-    &--three:hover {
-        background-color: fade(#007BB6,70%);
-    }
-    &--four:hover {
-        background-color: fade(#3A5898,70%);
-    }
+  }
 
-    &--five {
-        position: relative;        
-        z-index: 1;                
-    
-        &::before {                  
-                border-radius: 50%;  
-                position: absolute;  
-                content: "";         
-                top: 0;         
-                right: 0;       
-                bottom: 0;       
-                left: 0;         
-                background-image:linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
-                opacity: 0;   
-                z-index: -1;   
-                transition: all .2s linear; 
-            }
-            &:hover::before {
-                opacity: 1;    /* При наведении на нашу иконку показываем цвет градиент, чтобы был плавный */
-            }
-    }
-    &--six:hover {
-        background-color: fade(#56ACEF,70%);
-    }
-    &--seven:hover {
-        background-color: fade(@black, 100%);
-    }
-    
 }
 
 .footer__item {
-    width: 2.3rem;
-    height: 2.3rem;
-    padding: 0.37rem;
+  width: 2.3rem;
+  height: 2.3rem;
+  padding: 0.37rem;
 
-    &:hover .footer__icon {
-        fill: @white;
-    }
+  &:hover .footer__icon {
+    fill: @white;
+  }
 
-    @media @mobileBig {
-        & {
-            width: 1.8rem;
-            height: 1.8rem;
-            padding: 0.37rem;
-        }
+  @media @mobileBig {
+    & {
+      width: 2.1rem;
+      height: 2.1rem;
     }
+  }
 }
 
 .footer__icon {
-    fill: @gray-light;
-    transition: all .2s linear;
+  fill: @gray-light;
+  transition: all 0.2s linear;
 }
