--- a/css/blocks/modal-resume-skills.less
+++ b/css/blocks/modal-resume-skills.less
@@ -1,45 +1,51 @@
 // main:  ../style.less
 
 .timeline-title {
-    font-size: 1.2rem;
-    font-weight: 700;
-    color: @black;
-    text-transform: uppercase;
-    margin-bottom: 1.8rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: @black;
+  text-transform: uppercase;
+  margin-bottom: 1.8rem;
 }
 
 .progress__bar {
-    display: flex;
-    align-items: center;
-    margin-bottom: 0.3rem;
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.3rem;
 
-    &:last-child {
-        margin-bottom: 0;
-    }
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .progress__bar-title {
-    font-size: 0.93rem;
-    font-weight: 300;
-    color: @black;
+  font-size: 0.93rem;
+  font-weight: 300;
+  color: @black;
 }
 
 .progress__bar-left {
-    width: 30%;
+  width: 30%;
 }
 
 .progress__bar-right {
-    padding-left: 1.2rem;
+  padding-left: 1.2rem;
 }
 
 .progress__bar-item {
-    width: 153px;
-    height: 6px;
-    background-color: #EFEFEF;
+  width: 153px;
+  height: 6px;
+  background-color: #efefef;
+
+  @media @mobile698px {
+      & {
+          width: 100px;
+      }
+  }
 }
 
 .progress__bar-progress {
-    width: 127px;
-    height: 6px;
-    background-color: @gray;
+  width: 127px;
+  height: 6px;
+  background-color: @gray;
 }
