--- a/css/blocks/modal.less
+++ b/css/blocks/modal.less
@@ -1,39 +1,62 @@
 // main: ../style.less
 /* Сначало верстаются сами модальные окна, потом они прикручиваются к JS */
-.modal {              //Создаем маску модального окна, фон на котором будет содержимое модального окна
-    display: flex;
-    width: 100%;   //Растягиваем маску по всему сайту, поверх всего
-    height: 100%;
+.modal {
+  //Создаем маску модального окна, фон на котором будет содержимое модального окна
+  display: flex;
+  width: 100%; //Растягиваем маску по всему сайту, поверх всего
+  height: 100%;
 
-    padding: 1rem;
+  padding: 1.2rem 0;
 
-    background-image: linear-gradient(326deg, rgba(238,207,186, 0.8), rgba(197,221, 232, 0.8)); //Делаем линейный градиент с прозрачностю.
+  background-image: linear-gradient(
+    326deg,
+    rgba(238, 207, 186, 0.8),
+    rgba(197, 221, 232, 0.8)
+  ); //Делаем линейный градиент с прозрачностю.
 
-    position: fixed;  //Маска будет фиксированная в одном месте, ниже указываем позицию.
-    top: 0;
-    left: 0;
-    z-index: 1000;  //Делаем чтобы маска, и потом модальное окно было поверх всего содержимого
+  position: fixed; //Маска будет фиксированная в одном месте, ниже указываем позицию.
+  top: 0;
+  left: 0;
+  z-index: 1000; //Делаем чтобы маска, и потом модальное окно было поверх всего содержимого
 
-    overflow: auto;
+  overflow: auto;
 
-    @media @laptopThree {
-        & {
-            padding: 1rem 3rem;
-        }
+  @media @laptopThree {
+    & {
+      padding: 1.2rem 2rem;
     }
+  }
 
-    @media @tablet {
-        & {
-            padding: 1rem 3rem;
-        }
+  @media @tablet {
+    & {
+      padding: 1rem 6rem;
     }
+  }
+
+  @media @tablet1040px {
+    & {
+      padding: 2rem 2.5rem;
+    }
+  }
+
+  @media @mobileBig {
+    & {
+      padding: 3rem 0.5rem;
+    }
+  }
+
+  @media @mobile {
+    & {
+      padding: 3rem 1rem;
+    }
+  }
 }
 
 .modal__dialog {
-    position: relative;
-    border-radius: 2.3rem;
-    width: 100%; //Ширина 100%, в max-width указываем какая именно максимальная ширина будет.
-    max-width: 1200px; //Максимальная ширина 1200px, чтобы модальное окно при сужении не вылазило за экран, было адаптивным.
-    margin: auto; //Выровняли по центру по горизонтали и вертикали
-    background-color: @white;
+  position: relative;
+  border-radius: 2.3rem;
+  width: 100%; //Ширина 100%, в max-width указываем какая именно максимальная ширина будет.
+  max-width: 1200px; //Максимальная ширина 1200px, чтобы модальное окно при сужении не вылазило за экран, было адаптивным.
+  margin: auto; //Выровняли по центру по горизонтали и вертикали
+  background-color: @white;
 }
