--- a/css/blocks/news.less
+++ b/css/blocks/news.less
@@ -1,255 +1,252 @@
 // main: ../style.less
 
 .news {
-    margin-top: 12rem;
-    margin-bottom: 8.13rem;
+  margin-top: 12rem;
+  margin-bottom: 8.13rem;
 
-    @media @mobile {
-        & {
-            margin-top: 4rem;
-        }
+  @media @mobile {
+    & {
+      margin-top: 4rem;
     }
+  }
 }
 
 .news__header {
-    
-    text-align: center;
-    margin-bottom: 3.66rem;
+  text-align: center;
+  margin-bottom: 3.66rem;
 }
 
 .news__title {
-    text-transform: uppercase;
-    font-size: 2.8rem;
-    font-weight: 700;
+  text-transform: uppercase;
+  font-size: 2.8rem;
+  font-weight: 700;
 }
 
 .news__text {
-    font-size: 1.2rem;
-    font-weight: 300;
-    color: @gray;
+  font-size: 1.2rem;
+  font-weight: 300;
+  color: @gray;
 }
 
 .news__items {
-    display: flex;
-    margin: -1.2rem;
-    flex-wrap: wrap;
+  display: flex;
+  margin: -1.2rem;
+  flex-wrap: wrap;
 
-    @media @tablet {
-        & {
-            display: flex;
-            justify-content: center;
-        }
+  @media @tablet {
+    & {
+      display: flex;
+      justify-content: center;
     }
+  }
 }
 
 .news__item {
-    display: flex;
-    position: relative;
-    flex-basis: 33.33333%;
-    padding: 1rem;
-    border-radius: 1.13rem;
-    
-    @media @tablet {
-        &:nth-child(3) {
-           display: none;
-        }
-    }
+  display: flex;
+  position: relative;
+  flex-basis: 33.33333%;
+  padding: 1rem;
+  border-radius: 1.13rem;
 
-    @media @mobileAvg {
-        & {
-            flex-basis: 350px;
-        }
+  @media @tablet {
+    &:nth-child(3) {
+      display: none;
     }
+  }
 
-    @media @mobile698px {
-        & {
-            flex-basis: 400px;
-        }
+  @media @mobileAvg {
+    & {
+      flex-basis: 350px;
     }
+  }
+
+  @media @mobile698px {
+    & {
+      flex-basis: 400px;
+    }
+  }
 }
 
 .news__shadow {
-    box-shadow: 0 0 4px rgb(43 42 44 / 25%);
-    border-radius: 17px;
-    border: 1px solid rgba(43,42,44,0);
-    transition: .2s linear;
-    max-width: 100%;
-    cursor: pointer;
+  box-shadow: 0 0 4px rgb(43 42 44 / 25%);
+  border-radius: 17px;
+  border: 1px solid rgba(43, 42, 44, 0);
+  transition: 0.2s linear;
+  max-width: 100%;
+  cursor: pointer;
 
-    &:hover {
-        box-shadow: 0 0 25px fade(@black, 25%);
-        border: 1px solid fade(@black, 30%);
-    }
+  &:hover {
+    box-shadow: 0 0 25px fade(@black, 25%);
+    border: 1px solid fade(@black, 30%);
+  }
 
-    &:hover .news__content {
-        opacity: 1;
-    }
+  &:hover .news__content {
+    opacity: 1;
+  }
 }
 
 .news__img {
-    border-top-left-radius: 1.13rem;
-    border-top-right-radius: 1.13rem;
+  border-top-left-radius: 1.13rem;
+  border-top-right-radius: 1.13rem;
 
-   @media @mobileAvg {
-       & {
-        position: relative;
-        width: 100%;
-        height: 300px;
-    
-        overflow: hidden;
-       }
-   }  
+  @media @mobileAvg {
+    & {
+      position: relative;
+      width: 100%;
+      height: 300px;
+
+      overflow: hidden;
+    }
+  }
 }
 
 .news__photo {
-    border-top-left-radius: 1.13rem;
-    border-top-right-radius: 1.13rem;
+  border-top-left-radius: 1.13rem;
+  border-top-right-radius: 1.13rem;
 
-    @media @mobileAvg {
-        & {
-            position: absolute;
-            width: 350px;
-            max-width: 100%;   // Расположили по центру картинку в полном её размере в маленький квадрат. Адаптивно.
-        }
+  @media @mobileAvg {
+    & {
+      position: absolute;
+      width: 350px;
+      max-width: 100%; // Расположили по центру картинку в полном её размере в маленький квадрат. Адаптивно.
     }
+  }
 
-    @media @mobile698px {
-        & {
-            width: 400px;
-        }
+  @media @mobile698px {
+    & {
+      width: 400px;
     }
+  }
 }
 
 .news__content {
-    display: flex;
-    position: absolute;
-    flex-direction: column;
-    left: 1;
-    top: 0.3;
-    width: 5rem;
-    height: 5rem;
-    z-index: 1;
-    background-color: fade(@black, 80%);
-    border-top-left-radius: 1.13rem;
-    border-bottom-right-radius: 1.13rem;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  left: 1;
+  top: 0.3;
+  width: 5rem;
+  height: 5rem;
+  z-index: 1;
+  background-color: fade(@black, 80%);
+  border-top-left-radius: 1.13rem;
+  border-bottom-right-radius: 1.13rem;
+  justify-content: center;
+  align-items: center;
 
-    transition: all .4s linear;
-    opacity: 0;
+  transition: all 0.4s linear;
+  opacity: 0;
 }
 
-
 .news__content-text {
-    text-align: center;
-    color: fade(@white, 15%);
+  text-align: center;
+  color: fade(@white, 15%);
 
-    & span {
-        transition: all .3s linear;
-    }
+  & span {
+    transition: all 0.3s linear;
+  }
 
-    & span:nth-child(2) {
-        transition-delay: .3s;
-    }
-    & span:nth-child(3) {
-        transition-delay: .4s;
-    }
-    & span:nth-child(4) {
-        transition-delay: .5s;
-    }
-    & span:nth-child(5) {
-        transition-delay: .6s;
-    }
-    & span:nth-child(6) {
-        transition-delay: .7s;
-    }
-    & span:nth-child(7) {
-        transition-delay: .8s;
-    }
-    & span:nth-child(8) {
-        transition-delay: .9s;
-    }
-    & span:nth-child(9) {
-        transition-delay: 1s;
-    }
-    & span:nth-child(10) {
-        transition-delay: 1.1s;
-    }
-    & span:nth-child(11) {
-        transition-delay: 1.2s;
-    }
+  & span:nth-child(2) {
+    transition-delay: 0.3s;
+  }
+  & span:nth-child(3) {
+    transition-delay: 0.4s;
+  }
+  & span:nth-child(4) {
+    transition-delay: 0.5s;
+  }
+  & span:nth-child(5) {
+    transition-delay: 0.6s;
+  }
+  & span:nth-child(6) {
+    transition-delay: 0.7s;
+  }
+  & span:nth-child(7) {
+    transition-delay: 0.8s;
+  }
+  & span:nth-child(8) {
+    transition-delay: 0.9s;
+  }
+  & span:nth-child(9) {
+    transition-delay: 1s;
+  }
+  & span:nth-child(10) {
+    transition-delay: 1.1s;
+  }
+  & span:nth-child(11) {
+    transition-delay: 1.2s;
+  }
 
-    .news__item:hover & span {
-        color: @white;
-    }
+  .news__item:hover & span {
+    color: @white;
+  }
 }
 
 .news__item-title {
-    font-size: 1.2rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    margin-bottom: 0.4rem;
-    margin-top: 1rem;
-    padding: 0 0.66rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 0.4rem;
+  margin-top: 1rem;
+  padding: 0 0.66rem;
 }
 
 .news__item-category {
-    font-size: 0.8rem;
-    font-weight: 400;
-    margin-bottom: 1.2rem;
-    padding: 0 0.66rem;
+  font-size: 0.8rem;
+  font-weight: 400;
+  margin-bottom: 1.2rem;
+  padding: 0 0.66rem;
 }
 
 .news__item-text {
-    font-size: 0.8rem;
-    font-weight: 300;
-    color: @gray;
-    margin-bottom: 1.2rem;
-    padding: 0 0.66rem;
+  font-size: 0.8rem;
+  font-weight: 300;
+  color: @gray;
+  margin-bottom: 1.2rem;
+  padding: 0 0.66rem;
 }
 
 .news__button {
-    padding: 0.67rem 0;
-    
+  padding: 0.67rem 0;
 }
 
 .news__btn {
-    text-align: left;
-    font-size: 0.93rem;
-    font-weight: 400;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: @gray;
-    border: 1px solid @black;
-    border-bottom-left-radius: 1.2rem;
-    border-top-right-radius: 1.2rem;
-    padding: 0.66rem 1.33rem;
-    transition: all .2s linear;
+  text-align: left;
+  font-size: 0.93rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: @gray;
+  border: 1px solid @black;
+  border-bottom-left-radius: 1.2rem;
+  border-top-right-radius: 1.2rem;
+  padding: 0.66rem 1.33rem;
+  transition: all 0.2s linear;
 
-    &:hover {
-        background-color: fade(@black, 90%);
-        color: @white;
-    }
+  &:hover {
+    background-color: fade(@black, 90%);
+    color: @white;
+  }
 }
 
 .news__link {
-    width: 1200px;
-    text-align: right;
+  width: 1200px;
+  text-align: right;
 }
 
 .news__link-more {
-    font-size: 0.93rem;
-    font-weight: 400;
-    color: @gray;
+  font-size: 0.93rem;
+  font-weight: 400;
+  color: @gray;
 }
 
 .news__button__arrow {
-    width: 1200px;
-    margin-top: 1rem;
+  width: 1200px;
+  margin-top: 1rem;
 
-    @media @mobile {
-        & {
-            margin-top: 0;
-        }
+  @media @mobile {
+    & {
+      margin-top: 0;
     }
+  }
 }
