--- a/css/vars.less
+++ b/css/vars.less
@@ -1,20 +1,25 @@
 // main: style.less
 
-@black: #2B2A2C;
-@gray: #6A696B;
-@gray-light: #8D8D8E;
+@black: #2b2a2c;
+@gray: #6a696b;
+@gray-light: #8d8d8e;
 @white: #fff;
 @radius: 20px;
 
 /* Media */
 
-@mobileSmall: ~"(max-width: 485px)";  // Переменная для написания медиа запросов. (tablet)
+@mobile405px: ~"(max-width: 405px)";
+@mobileSmall: ~"(max-width: 485px)"; // Переменная для написания медиа запросов. (tablet)
+@mobile471px: ~"(max-width: 471px)";
+@mobile560px: ~"(max-width: 560px)";
+@mobile605px: ~"(max-width: 605px)";
 @mobile698px: ~"(max-width: 698px)";
 @mobileNormal: ~"(max-width: 720px)";
-@mobileAvg: ~"(max-width: 797px)";  // Переменная для написания медиа запросов. (tablet)
-@mobile: ~"(max-width: 808px)";  // Переменная для написания медиа запросов. (tablet)
-@mobileBig: ~"(max-width: 885px)";  // Переменная для написания медиа запросов. (tablet)
-@tablet: ~"(max-width: 1200px)";  // Переменная для написания медиа запросов. (laptopTab)
-@laptopTwo: ~"(max-width: 1284px)";  // Переменная для написания медиа запросов. (laptopTab)
+@mobileAvg: ~"(max-width: 797px)"; // Переменная для написания медиа запросов. (tablet)
+@mobile: ~"(max-width: 808px)"; // Переменная для написания медиа запросов. (tablet)
+@mobileBig: ~"(max-width: 885px)"; // Переменная для написания медиа запросов. (tablet)
+@tablet1040px: ~"(max-width: 1040px)";
+@tablet: ~"(max-width: 1200px)"; // Переменная для написания медиа запросов. (laptopTab)
+@laptopTwo: ~"(max-width: 1284px)"; // Переменная для написания медиа запросов. (laptopTab)
 @laptopThree: ~"(max-width: 1400px)";
-@laptop: ~"(max-width: 1679px)";  // Переменная для написания медиа запросов. (laptop)
+@laptop: ~"(max-width: 1679px)"; // Переменная для написания медиа запросов. (laptop)
