--- a/css/blocks/modal-resume.less
+++ b/css/blocks/modal-resume.less
@@ -25,7 +25,6 @@
 
   @media @mobile {
     & {
-      
     }
   }
 }
@@ -52,9 +51,9 @@
 
   @media @mobile698px {
     & {
-        font-size: 2.5rem;
+      font-size: 2.5rem;
     }
-}
+  }
 }
 
 .modal__resume__buttons {
@@ -161,6 +160,13 @@
 
 .modal__resume__inner {
   display: flex;
+
+  @media @mobileNormal {
+    & {
+      justify-content: center;
+      align-items: center;
+    }
+  }
 }
 
 .modal__inner__title {
@@ -169,6 +175,61 @@
   color: @black;
   text-transform: uppercase;
   margin-bottom: 2.46rem;
+
+  @media @mobileNormal {
+    & {
+      display: none;
+      text-align: center;
+    }
+  }
+}
+
+.modal__inner-links {
+  display: none;
+
+  @media @mobileNormal {
+    & {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 2rem;
+    }
+  }
+}
+
+.modal__inner__expirience-link {
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: @black;
+  text-transform: uppercase;
+  margin-bottom: 2.46rem;
+  display: none;
+
+  @media @mobileNormal {
+    & {
+      margin: 0;
+      padding: 0 0.6rem;
+      display: block;
+    }
+  }
+}
+
+.modal__inner__education-link {
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: @black;
+  text-transform: uppercase;
+  margin-bottom: 2.46rem;
+  display: none;
+
+  @media @mobileNormal {
+    & {
+      margin: 0;
+      padding: 0 0.6rem;
+      display: block;
+    }
+  }
 }
 
 .modal__inner__item {
@@ -180,11 +241,11 @@
 }
 
 .modal__inner__item-none {
-    @media @mobile698px {
-        & {
-            display: none;
-        }
+  @media @mobile698px {
+    & {
+      display: none;
     }
+  }
 }
 
 .modal__inner__subtitle {
@@ -229,6 +290,19 @@
     position: absolute;
     right: 0;
     top: 0;
+
+    @media @mobileNormal {
+      & {
+        display: none;
+      }
+    }
+  }
+
+  @media @mobileNormal {
+    & {
+      text-align: center;
+      width: 60%;
+    }
   }
 }
 
@@ -236,4 +310,10 @@
   padding: 0 3.16rem;
   width: 50%;
   text-align: left;
+
+  @media @mobileNormal {
+    & {
+      display: none;
+    }
+  }
 }
