Modal contacts optimization

--- a/css/blocks/modal-contact.less
+++ b/css/blocks/modal-contact.less
@@ -13,26 +13,57 @@
       width: 100%;
     }
   }
+
+  @media @mobile605px {
+    & {
+      padding: 1.5rem 2rem;
+    }
+  }
+
 }
 
 .modal__contact__title {
   margin-bottom: 2rem;
   text-transform: uppercase;
   color: @black;
+
+  @media @mobile605px {
+    & {
+      margin-bottom: 1.3rem;
+    }
+  }
 }
 
 .modal__contact__subtitle {
   font-size: 3rem;
   font-weight: 700;
+
+  @media @mobile605px {
+    & {
+      font-size: 2rem;
+    }
+  }
 }
 
 .modal__contact__text {
   font-size: 1.06rem;
   font-weight: 400;
+
+  @media @mobile605px {
+    & {
+      font-size: 0.8rem;
+    }
+  }
 }
 
 .modal__contact__contacts {
   margin-bottom: 3rem;
+
+  @media @mobile605px {
+    & {
+      margin-bottom: 1.3rem;
+    }
+  }
 }
 
 .modal__contact__item {
