--- a/css/blocks/modal.less
+++ b/css/blocks/modal.less
@@ -47,7 +47,13 @@
 
   @media @mobile {
     & {
-      padding: 3rem 1rem;
+      padding: 3rem 5rem;
+    }
+  }
+
+  @media @mobileNormal {
+    & {
+      padding: 3rem 3rem;
     }
   }
 }
