Modal contacts optimization two

--- a/css/blocks/modal.less
+++ b/css/blocks/modal.less
@@ -56,6 +56,12 @@
       padding: 3rem 3rem;
     }
   }
+
+  @media @mobile471px {
+    & {
+      padding: 3rem 1.5rem;
+    }
+  }
 }
 
 .modal__dialog {
