Correct block About.

--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -124,6 +124,13 @@
       font-size: 3.5rem;
     }
   }
+
+  @media @mobile471px {
+    & {
+      font-size: 3rem;
+    }
+  }
+
 }
 
 .about__text {
