--- a/css/blocks/news.less
+++ b/css/blocks/news.less
@@ -20,6 +20,12 @@
   text-transform: uppercase;
   font-size: 2.8rem;
   font-weight: 700;
+
+  @media @mobile605px {
+    & {
+      font-size: 2.4rem;
+    }
+  }
 }
 
 .news__text {
