Add logic on button in news.

--- a/css/blocks/news.less
+++ b/css/blocks/news.less
@@ -235,6 +235,16 @@
   }
 }
 
+.news__button-second-hide {
+  display: none;
+
+  @media @tablet {
+    & {
+      transform: rotate(180deg);
+    }
+  }
+}
+
 .news__link {
   width: 1200px;
   text-align: right;
