Append final solve about arrows more in blocks - Works, News.

--- a/css/blocks/news.less
+++ b/css/blocks/news.less
@@ -235,9 +235,11 @@
   }
 }
 
-.news__button-second-hide {
+.news__button__arrow .news__button-second-hide {
   display: none;
+}
 
+.news__button-second-rotate {
   @media @tablet {
     & {
       transform: rotate(180deg);
