Add adaptation button (Show more works) when width will be more han 1199px)

--- a/css/blocks/work.less
+++ b/css/blocks/work.less
@@ -151,6 +151,13 @@
 }
 
 .work__button-second-rotate {
+
+  @media @fullHd1920px {
+    & {
+      transform: rotate(180deg);
+    }
+  }
+
   @media @tablet {
     & {
       transform: rotate(180deg);
@@ -214,6 +221,13 @@
   }
 
   .news__button-second-hide &--up {
+
+    @media @fullHd1920px {
+      & {
+        left: 3.5px;
+      }
+    }
+
     @media @tablet {
       & {
         left: 3.5px;
@@ -222,6 +236,13 @@
   }
 
   .news__button-first-show &--up {
+
+    @media @fullHd1920px {
+      & {
+        left: 3.5px;
+      }
+    }
+    
     @media @tablet {
       & {
         left: 3.5px;
@@ -230,6 +251,13 @@
   }
 
   .news__button-second-hide &--down {
+
+    @media @fullHd1920px {
+      & {
+        left: 3.5px;
+      }
+    }
+
     @media @tablet {
       & {
         left: 3.5px;
@@ -238,6 +266,13 @@
   }
 
   .news__button-first-show &--down {
+
+    @media @fullHd1920px {
+      & {
+        left: 3.5px;
+      }
+    }
+
     @media @tablet {
       & {
         left: 3.5px;
