--- a/css/vars.less
+++ b/css/vars.less
@@ -23,3 +23,4 @@
 @laptopTwo: ~"(max-width: 1284px)"; // Переменная для написания медиа запросов. (laptopTab)
 @laptopThree: ~"(max-width: 1400px)";
 @laptop: ~"(max-width: 1679px)"; // Переменная для написания медиа запросов. (laptop)
+@fullHd1920px: ~"(max-width: 1920px)";
