Final result modal work, and temporarily solve about transition hover (background)

--- a/css/vars.less
+++ b/css/vars.less
@@ -13,11 +13,15 @@
 @mobileSmall: ~"(max-width: 485px)"; // Переменная для написания медиа запросов. (tablet)
 @mobile560px: ~"(max-width: 560px)";
 @mobile605px: ~"(max-width: 605px)";
+@mobile620px: ~"(max-width: 620px)";
 @mobile698px: ~"(max-width: 698px)";
 @mobileNormal: ~"(max-width: 720px)";
+@mobile750px: ~"(max-width: 750px)";
 @mobileAvg: ~"(max-width: 797px)"; // Переменная для написания медиа запросов. (tablet)
 @mobile: ~"(max-width: 808px)"; // Переменная для написания медиа запросов. (tablet)
 @mobileBig: ~"(max-width: 885px)"; // Переменная для написания медиа запросов. (tablet)
+@mobile910px: ~"(max-width: 910px)";
+@mobile980px: ~"(max-width: 980px)";
 @tablet1040px: ~"(max-width: 1040px)";
 @tablet: ~"(max-width: 1199px)"; // Переменная для написания медиа запросов. (laptopTab)
 @laptopTwo: ~"(max-width: 1284px)"; // Переменная для написания медиа запросов. (laptopTab)
