--- a/css/blocks/modal-work.less
+++ b/css/blocks/modal-work.less
@@ -5,6 +5,14 @@
 .modal-work {
   display: flex;
   border-radius: 2.3rem;
+
+  @media @mobile750px {
+    & {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
 }
 
 .modal-work__preview {
@@ -13,6 +21,38 @@
   overflow: hidden;
   border-top-left-radius: 2.3rem;
   border-bottom-left-radius: 2.3rem;
+
+  @media @mobile750px {
+    & {
+      width: 100%;
+      height: 370px;
+    }
+  }
+
+  @media @mobileNormal {
+    & {
+      height: 330px;
+    }
+  }
+
+  @media @mobile698px {
+    & {
+      height: 300px;
+    }
+  }
+
+  @media @mobile560px {
+    & {
+      height: 270px;
+    }
+  }
+
+  @media @mobileSmall {
+    & {
+      height: 240px;
+    }
+  }
+  
 }
 
 .modal-work__photo {
@@ -31,12 +71,75 @@
   position: relative;
   width: 35%;
   padding: 3rem 3rem 1rem 3rem;
+
+  @media @tablet {
+    & {
+      padding: 2rem 3rem 1rem 3rem;
+    }
+  }
+
+  @media @mobile910px {
+    & {
+      padding: 1.5rem 1rem 1rem 1rem;
+    }
+  }
+
+  @media @mobile750px {
+    & {
+      width: 100%;
+      padding: 0 6rem;
+    }
+  }
+
+  @media @mobileNormal {
+    & {
+      padding: 0 5rem;
+    }
+  }
+
+  @media @mobile698px {
+    & {
+      padding: 0 4rem;
+    }
+  }
+
+  @media @mobile620px {
+    & {
+      padding: 0 3rem;
+    }
+  }
+
+  @media @mobileSmall {
+    & {
+      padding: 0 2rem;
+    }
+  }
 }
 
 .modal-work__title {
-  font-size: 2.13rem;
+  font-size: 2.3rem;
   font-weight: 700;
   color: @black;
+  margin-bottom: 0.5rem;
+
+  @media @tablet {
+    & {
+      font-size: 1.9rem;
+    }
+  }
+
+  @media @mobile980px {
+    & {
+      font-size: 1.5rem;
+    }
+  }
+
+  @media @mobile750px {
+    & {
+      margin-top: 0.5rem;
+    }
+  }
+
 }
 
 .modal-work__info {
@@ -49,7 +152,27 @@
 .modal-work__cat-date {
   color: @gray;
   font-weight: 400;
-  font-size: 1.2rem;
+  font-size: 1rem;
+
+  @media @mobile980px {
+    & {
+      font-size: 0.8rem;
+    }
+  }
+}
+
+.modal-work__message {
+  padding: 0 0 5rem 0;
+
+  @media @mobile910px {
+    & {
+      padding: 0 0 3.5rem 0;
+    }
+  }
+}
+
+.modal-work__customer {
+  margin-bottom: .5rem;
 }
 
 .modal-work__cat {
@@ -64,6 +187,12 @@
 
     margin-left: 0.5rem;
     position: absolute;
+
+    @media @mobile980px {
+      & {
+        height: 1rem;
+      }
+    }
   }
 }
 
@@ -71,6 +200,12 @@
   font-size: 1.13rem;
   font-weight: 700;
   color: @black;
+
+  @media @mobile980px {
+    & {
+      font-size: 0.9rem;
+    }
+  }
 }
 
 .modal-work__name {
@@ -78,14 +213,25 @@
   color: @gray;
   font-weight: 400;
   font-style: italic;
+
+  @media @mobile980px {
+    & {
+      font-size: 0.9rem;
+    }
+  }
 }
 
 .modal-work__text {
-  line-height: 2;
-  font-size: 0.8rem;
+  line-height: 1.7;
+  font-size: 0.9rem;
   font-weight: 300;
   color: @gray;
-  margin-bottom: 8.66rem;
+
+   @media @laptopTwo {
+     & {
+       font-size: 0.7rem;
+     }
+   }
 }
 
 .modal-work__buttons {
@@ -123,6 +269,7 @@
 
   &:hover .modal__close-img-icon {
     fill: @white;
+    background-image: red;
   }
 
   &:hover .modal__close-img {
