Final result about modal work. Append some information in About, modal work. Add infinity rotating icon

--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -137,6 +137,10 @@
   margin-bottom: 2.66rem;
   font-size: 0.8rem;
   color: @gray;
+
+  &--link {
+    text-decoration: none;
+  }
 }
 
 .about__text-one {
