--- a/css/blocks/footer.less
+++ b/css/blocks/footer.less
@@ -255,3 +255,11 @@
   fill: @gray-light;
   transition: all 0.2s linear;
 }
+
+/* React JS */
+/* React.js плюсы:
+- Хорошая производительность, поскольку он основан на виртуальной модели DOM.
+- Его компоненты можно повторно использовать в разных частях приложения.
+- Большое сообщество постоянно развивается и делает фреймворк стабильным.
+- Он универсален и может использоваться с любыми фреймворками.
+- Односторонний поток данных. */
