--- a/css/blocks/helpers.less
+++ b/css/blocks/helpers.less
@@ -83,3 +83,10 @@
   transition: all 1s ease;
   transform: translateX(-290px);
 }
+
+.modal-work__soon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4rem;
+}
