--- a/css/blocks/news.less
+++ b/css/blocks/news.less
@@ -50,10 +50,9 @@
 .news__item {
   display: flex;
   position: relative;
-  flex-basis: 33.33333%;
+  flex-basis: 400px;
   padding: 1rem;
   border-radius: 1.13rem;
-
   @media @tablet {
     &:nth-child(3) {
       display: none;
@@ -94,6 +93,7 @@
 .news__img {
   border-top-left-radius: 1.13rem;
   border-top-right-radius: 1.13rem;
+  position: relative;
 
   @media @mobileAvg {
     & {
@@ -105,6 +105,35 @@
     }
   }
 }
+
+.news__img-one {
+  // border-top-left-radius: 1.13rem;
+  // border-top-right-radius: 1.13rem;
+  // width: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background: @black;
+   height: 350px;
+   flex-basis: 350px;
+}
+
+ .news__photo-one {
+   width: 350px;
+   flex-basis: 350px;
+   display: block;
+   
+ }
+
+ .news__img-one img {
+   animation: spin 10s linear infinite;
+   animation-play-state: running;
+ }
+ @keyframes spin {
+   to {
+     transform: rotate(1turn);
+   }
+ }
 
 .news__photo {
   border-top-left-radius: 1.13rem;
@@ -195,6 +224,12 @@
   margin-bottom: 0.4rem;
   margin-top: 1rem;
   padding: 0 0.66rem;
+
+  @media @mobileAvg {
+    & {
+      font-size: 1rem;
+    }
+  }
 }
 
 .news__item-category {
@@ -240,7 +275,6 @@
 }
 
 .news__button-second-rotate {
-
   @media @fullHd1920px {
     & {
       transform: rotate(180deg);
